# BatlleRoyalBoard

./: commit.b.sh  notes.txt  pyproject.toml  request.txt  result.7z
algo/: Algo.py  Algo2.py  Algo3.py  pos.json
assets/fira_code/: FiraCode-VariableFont_wght.pkl  testtfont.pkl
assets/fira_code/static/: FiraCode-Bold.pkl  FiraCode-Medium.pkl
doc/: algorithm - Equation for testing if a point is inside a circle - Stack Overflow (10_4_2022 7_48_25 PM).html
pyth/: A3Map.py  A4Map.py  creategrid.py  createpdf.py  grid.py  rangeGrid.py  recap_sheet.py
result/: result_br_A0.json  result_br_A0.pkl  result_br_A1.json  result_br_A1.pkl  result_br_A10.json  result_br_A10.pkl  result_br_A11.json  result_br_A11.pkl  result_br_A12.json  result_br_A12.pkl  result_br_A13.json  result_br_A13.pkl  result_br_A14.json  result_br_A14.pkl  result_br_A15.json  result_br_A15.pkl  result_br_A16.json  result_br_A16.pkl  result_br_A17.json  result_br_A17.pkl  result_br_A18.json  result_br_A18.pkl  result_br_A19.json  result_br_A19.pkl  result_br_A2.json  result_br_A2.pkl  result_br_A20.json  result_br_A20.pkl  result_br_A3.json  result_br_A3.pkl  result_br_A4.json  result_br_A4.pkl  result_br_A5.json  result_br_A5.pkl  result_br_A6.json  result_br_A6.pkl  result_br_A7.json  result_br_A7.pkl  result_br_A8.json  result_br_A8.pkl  (+1600 more)
